add korustec banner

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,13 +24,13 @@
           <%= image_tag "banner_ook_a.jpg", class: "img-responsive" %>
         </div>
         <div class="col-md-2 hidden-xs hidden-sm banner">
+          <%= image_tag "banner_korustec_a.jpg", class: "img-responsive" %>
+        </div>
+        <div class="col-md-2 hidden-xs hidden-sm banner">
           <%= image_tag "banner_mdkm_a.png", class: "img-responsive" %>
         </div>
         <div class="col-md-2 hidden-xs hidden-sm banner">
-          <%= image_tag "banner_kahak_a.png", class: "img-responsive" %>
-        </div>
-        <div class="col-md-2 hidden-xs hidden-sm banner">
-          <%= image_tag "banner_tinbo_a.png", class: "img-responsive" %>
+          <%= image_tag "banner_kahak_tinbo_a.jpg", class: "img-responsive" %>
         </div>
 
         <div class="hidden-md hidden-lg banner">
@@ -43,7 +43,10 @@
           <%= image_tag "banner_ook_a.jpg", class: "img-responsive" %>
         </div>
         <div class="hidden-md hidden-lg banner">
-          <%= image_tag "banner_mdkm_a.png", class: "img-responsive" %>
+          <%= image_tag "banner_korustec_b.jpg", class: "img-responsive" %>
+        </div>
+        <div class="hidden-md hidden-lg banner">
+          <%= image_tag "banner_mdkm_b.png", class: "img-responsive" %>
         </div>
         <div class="hidden-md hidden-lg banner">
           <%= image_tag "banner_kahak_tinbo.jpg", class: "img-responsive" %>
