--- a/app/views/applics/index.xls.erb
+++ b/app/views/applics/index.xls.erb
@@ -33,6 +33,8 @@
         <Cell><Data ss:Type="String">Тип участия</Data></Cell>
         <Cell><Data ss:Type="String">Нужна ли гостиница</Data></Cell>
         <Cell><Data ss:Type="String">Отправлен доклад</Data></Cell>
+        <Cell><Data ss:Type="String">Файл доклада</Data></Cell>
+        <Cell><Data ss:Type="String">Файл акта</Data></Cell>
       </Row>
     <% @applics.each do |applic| %>
       <Row>
@@ -62,6 +64,8 @@
         <Cell><Data ss:Type="String"><%= applic.participation_type %></Data></Cell>
         <Cell><Data ss:Type="String"><%= applic.need_hotel %></Data></Cell>
         <Cell><Data ss:Type="String"><%= applic.applic_file ? "Да" : "Нет" %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.applic_file ? applic.applic_file.file1.url : "" %></Data></Cell>
+        <Cell><Data ss:Type="String"><%= applic.applic_file ? applic.applic_file.file2.url : "" %></Data></Cell>
       </Row>
     <% end %>
     </Table>
