--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -16,6 +16,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><%= link_to t(:home_link_home), root_path %></li>
+        <li><%= link_to t(:home_link_program), program_path %></li>
         <li><%= link_to t(:home_link_message), message_path %></li>
         <li><%= link_to t(:home_link_about), about_path %></li>
         <li><%= link_to t(:home_link_history), history_path %></li>
