--- a/app/views/static_pages/program.html.erb
+++ b/app/views/static_pages/program.html.erb
@@ -1,49 +1,124 @@
-<h2> Программа конференции</h2>
+<h2>Программа конференции</h2>
+<div class="row">
+  <div class="col-md-12">
+    <h3>August 26 – Sunday / 26 августа – Воскресенье</h3>
+    <div>
+      <b>16:00 – 19:00</b> Participants arrival, check-in, free time / <i>Заезд участников конференции, размещение, свободное время</i>
+    </div>
+    <div>
+      <b>19:00 – 21:00</b> Welcome dinner / <i>Приветственный ужин. (Приветственное слово Тен Э.Б.)</i>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    <h3>August 27 – Monday / 27 августа – Понедельник</h3>
+    <div>
+      <b>08:30 – 09:00</b> Registration of participants / <i>Регистрация участников</i>
+    </div>
+    <div>
+      <b>09:00 – 09:40</b> Opening ceremony / <i>Открытие конференции</i>
+      <ul>
+        <li><b>TEN Edis, President of AKSTS</b> / ТЕН Эдис Борисович, Президент НТО «АНТОК»</li>
+        <li><b>President of KOFST - TBC</b> / Президент КОФСТ (по согласованию)</li>
+        <li><b>Representative of Embassy of the Republic of Korea in Russia - TBC</b> / Представитель Посольства РК в РФ (по согласованию)</li>
+        <li><b>TSO Vasiliy, President of All-Russian Union of Koreans- TBC</b> / Цо Василий Иванович, Председатель ООК (по согласованию)</li>
+        <li><b>MUN Grigory, President of KAHAK</b> / Мун Григорий Алексеевич, Президент НТО «КАХАК»</li>
+        <li><b>YUN Lubov, President of TINBO</b> / Юн Любовь Мироновна, Президент НТО «ТИНБО»</li>
+        <li><b>SOH Gil Won, Director KORUSTEC - TBC</b> / СО Гиль Вон, Директор КОРУСТЕК (по согласованию)</li>
+      </ul>
+    </div>
+    <div style="background-color: lemonchiffon;">
+      <b>09:40 – 11:00</b> Plenary session / <i>Пленарное заседание</i><br>
+      <ul>
+        <li>09:40 – 10:20 CHZEN Victor, International Association for IP development IP-MARIS “Capitalization and monetization of intangible / ЧЖЕН Виктор Анатольевич, Международная ассоциация развития интеллектуальной собственности IP-MARIS «Капитализация и монетизация нематериальных активов»</li>
+        <li>10:20 – 11:00 MUN Grigory, President of KAHAK - TBC / МУН Григорий Алексеевич, Президент НТО «КАХАК» (по согласованию)</li>
+      </ul>
+    </div>
+    <div class="program_basic">
+      <b>11:00 – 11:15</b> Photo / <i>Коллективное фото</i>
+    </div>
+    <div class="program_yellow">
+      <b>11:15 – 11:30</b> Coffee break / <i>Перерыв</i>
+    </div>
+    <div class="program_basic">
+      <b>11:30 – 13:30</b> S&T Sessions / <i>Работа научных секций</i> (<b>Run parallel / Секции проходят параллельно</b>)<br>
+      <ul>
+        <li style="background-color: #fffe9f;">S&T Session A / Научная секция А</li>
+        <li style="background-color: #b7dde7;">S&T Session B / Научная секция В</li>
+        <li style="background-color: #29fd2f;">S&T Session С / Научная секция C</li>
+      </ul>
+    </div>
+    <div class="program_yellow"><b>13:30 – 14:30</b> Lunch / <i>Обед</i>
+    </div>
+    <div class="program_basic">
+      <b>14:30 – 16:30</b> Workshops (<b>Run parallel / Проходят параллельно</b>)</b>
+      <ul>
+        <li style="background-color: #fecdfe">IoT Workshop (D) by Samsung R&D</li>
+        <li style="background-color: #dbeef3">History of Korea Workshop (E) by Dr. Son Zhanna</li>
+      </ul>
+    </div>
+    <div class="program_basic"><b>16:30 – 16:45</b> Coffee break / <i>Перерыв</i></div>
+    <div class="program_yellow"><b>16:45 – 18:45</b> Workshops (<b>Run parallel / Проходят параллельно</b>)
+      <ul>
+        <li style="background-color: #fecb6e">StartupLab – YG Workshop (F) by Dr. Khvan A.</li>
+        <li style="background-color: #fc28fc">Leadership Workshop (G) by Dr. Lim Sang Hyun</li>
+      </ul>
+    </div>
+    <div class="program_basic"><b>19:00 – 21:00</b> Banquet / <i>Банкет</i></div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-12">
+    <h3>August 28 – Tuesday / 28 августа – Вторник</h3>
+    <div style="background-color: lemonchiffon;">
+      <b>09:00 – 10:00</b> Plenary session / <i>Пленарное заседание</i><br>
+      <ul>
+        <li>Academician RAS SON Eduard E., Russia / Академик СОН Э.Е., Россия;</li>
+        <li>Dr. KIM Hwi-Jun, Korean Institute of Industrial Technology, Korea - TBC/ Доктор KIM Hwi-Jun, Корейский институт промышленной технологии (по согласованию)</li>
+      </ul>
+    </div>
+    <div style="background-color: #fffd38;">
+      <b>10:00 – 12:00</b> Poster Session (H) / <i>Секция стендовых докладов</i>
+    </div>
+    <div>
+      <b>12:00 – 13:00</b> Lunch/ <i>Обед</i>
+    </div>
+    <div>
+      <b>13:00 – 17:00</b> Social Program / <i>Культурная программа</i>
+    </div>
+    <div>
+      <b>17:00 – 18:00</b> Dinner / <i>Ужин</i>
+    </div>
+    <div>
+      <b>18:00</b> Farewell / <i>Отъезд участников конференции</i>
+    </div>
+    <br>
+  </div>
+</div>
+
+<h3>S&T Session/Workshop (Название научной секции/семинара)</h3>
+<div class="row">
+  <div class="col-md-12">
+    <ul style="list-style-type: none;">
+      <li style="background-color: #fffe9f">A. Biotechnology, Chemistry & Social sciences / Биотехнологии, химия и общественные науки</li>
+      <li style="background-color: #b7dde7">B. Physics (fundamental), Math & IT / Физика, математика и IT</li>
+      <li style="background-color: #29fd2f">C. Engineering, New Materials and Earth Sciences/ Инженерные науки, новые материалы и науки о земле</li>
+      <li style="background-color: #fecdfe">D. IoT Workshop by Samsung R&D</li>
+      <li style="background-color: #dbeef3">E. History of Korea Workshop by Dr.Son Zhanna</li>
+      <li style="background-color: #fecb6e">F. StartupLab – YG Workshop by Dr. Khvan Alexander</li>
+      <li style="background-color: #fc28fc">G. Leadership Workshop by Dr. Lim Sang Hyun</li>
+      <li style="background-color: #fffd38">H. Poster Session / Секция стендовых докладов</li>
+    </ul>
+  </div>
+</div>
+
+<h3>IoT Workshop (D) by Samsung R&D</h3>
 <div class="row frontpage">
   <div class="col-md-12">
-    <p><strong>December 16, 2016 / Москва, 16 декабря, 2016</strong></p>
-    <div class="program_yellow">
-      <b>09:00 – 09:30</b> Registration of participants / <i>Регистрация участников</i></div>
-      <div class="program_basic">
-        <b>09:30 – 10:00</b> Opening ceremony / <i>Церемония открытия, приветственные слова участникам конференции (<a href="/files/Ten_E_B.pdf">Президент АНТОК, проф. Тен Э.Б.</a>, Президент ООК Цо В.И., <a href="/files/son_ee.pdf">Вице-президент АНТОК, проф., академик Сон Э.Е.</a>, Атташе по науке Посольства РК Джон Тек Рёл, Исполнительный директор KORUSTEC Ким Тэ Хи)</i>
-      </div>
-      <div class="program_yellow">
-        <b>10:00 – 10:15</b> Photo / <i>Коллективное фото</i>
-      </div>
-      <div class="program_basic">
-        <b>10:15 – 11:00</b> Plenary talk 1 / <i>Пленарный доклад 1 «Образование и наука в России и Республике Корея. Различия и общие тренды» <a href="/bio/#sonee">Сон Э.Е., проф., д.ф.-м.н., академик РАН</a> </i>
-      </div>
-      <div class="program_yellow">
-        <b>11:00 – 11:15</b> Coffee break / <i>Перерыв</i>
-      </div>
-      <div class="program_basic">
-        <b>11:15 – 11:35</b> Plenary talk 2 / <i><a href="/files/Kim_T_H.pdf">Пленарный доклад 2 «Научные и образовательные программы Республики Корея»</a>, <a href="/bio/#kimth">Ким Тэ Хи, к.полит.н., Исполнительный директор KORUSTEC</a> (на английском)</i>
-      </div>
-      <table class="section">
-        <tr>
-          <td class="A"
-          >Biomedical science and technology (KAST Symposium)<br/></td>
-          <td class="B">Herbal medicine and modern disease (KIOM Symposium)</a><br/></td>
-          <td class="C">Sustainable smart net zero energy city</td>
-        </tr>
-      </table>
-      <div class="program_basic"><b>11:30 – 13:30</b> Plenary talk 3 / <i>Пленарный доклад 3 «Коммерциализация инновационных разработок. Основные пути. Проблемы», <a href="/bio/#khvan">Хван А.Д., д.т.н., Директор Инновационного бизнес-инкубатора Воронежского Госуниверситета</a></i>
-      </div>
-      <div class="program_yellow"><b>12:00 – 13:00</b> Lunch / <i>Обед</i></div>
-      <div class="program_basic"><b>13:00 – 13:15</b></div>
-      <table class="section">
-        <tr>
-          <td class="A"
-          >Biomedical science and technology (KAST Symposium)<br/></td>
-          <td class="B">Herbal medicine and modern disease (KIOM Symposium)</a><br/></td>
-        </tr>
-      </table>
-      <div class="program_basic"><b>13:15 – 14:30</b> Poster session / <i>Секция стендовых докладов</i></div>
-      <div class="program_yellow"><b>14:30 – 14:45</b> Coffee break / <i>Перерыв</i></div>
-      <div class="program_basic"><b>14:45 – 15:00</b> Poster session evaluation / <i>Подведение итогов секции стендовых докладов. Награждение</i></div>
-      <div class="program_basic"><b>15:00 – 18:00</b> Training / <i><a href="/files/selezneva.pdf">Тренинг «Коммуникация в научной сфере: психология и технологии публичных выступлений». Селезнева А.В., к.полит.н., доц. МГУ</a></i></div>
-      <div class="program_yellow"><b>18:00 – 19:00</b> Moving to hotel SALUT** / <i><a href="/dinner">Перемещение в гостиницу «Салют»</a>**</i></div>
-      <div class="program_yellow"><b>19:00 – 22:00</b> Dinner / <i>Товарищеский ужин в ресторане «Менга»</i></div>
+    <div class="conf_img">
+      <%= image_tag "samsung.jpeg", class:"img-responsive", alt: "XVII Международной конференции по науке и технологиям" %>
     </div>
   </div>
 </div>
