--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,20 +1,23 @@
-<h2>Change your password</h2>
+<h2>Изменить пароль</h2>
+<div class="row">
+  <div class="col-md-6">
+    <%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
+      <%= f.error_notification %>
 
-<%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= f.error_notification %>
+      <%= f.input :reset_password_token, :as => :hidden %>
+      <%= f.full_error :reset_password_token %>
 
-  <%= f.input :reset_password_token, :as => :hidden %>
-  <%= f.full_error :reset_password_token %>
+      <div class="form-inputs">
+        <%= f.input :password, :label => "New password", :required => true, :autofocus => true, :input_html => { :class => 'form-control' } %>
+        <%= f.input :password_confirmation, :label => "Confirm your new password", :required => true, :input_html => { :class => 'form-control' } %>
+      </div>
 
-  <div class="form-inputs">
-    <%= f.input :password, :label => "New password", :required => true, :autofocus => true %>
-    <%= f.input :password_confirmation, :label => "Confirm your new password", :required => true %>
+      <div class="form-actions">
+        <%= f.button :submit, "Изменить пароль", class: 'btn-primary' %>
+      </div>
+    <% end %>
+    <br/>
+    <%= render "devise/shared/links" %>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
 
