--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,13 +1,16 @@
 <h2>Забыли пароль?</h2>
+<div class="row">
+  <div class="col-md-6">
+    <%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+      <%= f.error_notification %>
 
-<%= simple_form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= f.error_notification %>
+      <div class="form-inputs">
+        <%= f.input :email, :required => true, :autofocus => true, :input_html => { :class => 'form-control' }  %>
+      </div>
 
-  <div class="form-inputs">
-    <%= f.input :email, :required => true, :autofocus => true %>
+        <%= f.button :submit, "Выслать инструкцию по восстановлению пароля", class: 'btn-primary' %>
+    <% end %>
+    <br/>
+    <%= render "devise/shared/links" %>
   </div>
-
-    <%= f.button :submit, "Выслать инструкцию по восстановлению пароля" %>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
