--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,9 +10,9 @@
   <div class="col-md-6">
     <div class="invite_wrapper">
       <h2>Уважаемые коллеги!</h2>
-      <h3>Приглашаем принять участие в XVIII МЕЖДУНАРОДНОЙ КОНФЕРЕНЦИИ ПО НАУКЕ И ТЕХНОЛОГИЯМ РОССИЯ-КОРЕЯ-СНГ, которая пройдет</h3>
+      <h3>Приглашаем принять участие в XVIII МЕЖДУНАРОДНОЙ КОНФЕРЕНЦИИ ПО НАУКЕ И ТЕХНОЛОГИЯМ РОССИЯ-КОРЕЯ-СНГ, которая пройдет в Москве</h3>
       <h4>с 26 по 28 августа 2018 года</h4>
-      <h4>в подмосковном пансионате (уточняется).</h4>
+      <h4>в гостинице <%= link_to 'Holiday Inn Лесная', 'http://www.moscow-hi.ru/lesnaya/', target: '_blank' %></h4>
     </div>
   </div>
 </div>
