add tickets info

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -86,6 +86,8 @@
         <div><%= link_to "Информационное письмо (Рус.)", '/docs/Inform1_v3.0.docx' %></div>
         <br/>
         <div><%= link_to "Программа конференции / Program", '/docs/2018_Program_EN_RU_v1.4.pdf', target: "_blank" %></div>
+        <br/>
+        <div><%= link_to "О компенсации транспортных расходов", '/docs/tickets2018_v1.pdf', target: "_blank" %></div>
       </div>
     </div>
   </div>
