--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -15,6 +15,14 @@
   }
 }
 
+.home_img {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  img {
+    margin: 0 auto
+  }
+}
+
 .home_conf_title {
   text-align: center;
   margin-top: 40px;
@@ -38,6 +46,9 @@
 .invite_wrapper {
   margin-top: 20px;
   text-align: center;
+  .conf {
+    line-height: 1.4;
+  }
 }
 
 .invite_wrapper2 {
