--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -58,41 +58,47 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-6">
     <div class="invite_wrapper_dates">
-      <h3>Важные даты:</h3>
+      <h3>НОВОСТИ</h3>
+      <h4>Выступление в виде стендового доклада</h4>
+      <p><b>4 августа 2018</b></p>
+      <p>По результатам рассмотрения статей и тезисов докладов рецензентом будет определена форма выступления – устная презентация или стендовый доклад. <span style="background-color: yellow;">Список участников стендовой сессии</span> будет указан 10 августа 2018 г. на сайте конференции в разделе <i>Стендовая сессия</i>.</p>
+      <p>В день выступления Вы  должны разместить свой плакат в соответствии с номером, который Вы получите при регистрации. <b>По результатам работы членов Экспертной Комиссии будут определены победители сессии</b>.</p>
+      <p>После окончания постерной сессии, пожалуйста, снимите плакат. Организационный комитет не несет ответственности за постеры, неубранные вовремя.</p>
+      <p>Рекомендации по подготовке стендового доклада - <%= link_to "Стендовые требования", '/docs/stand.docx' %></p>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="invite_wrapper_dates">
+      <h3>Важные даты</h3>
       <ul>
         <li>20 июня – завершение приема докладов</li>
         <li>20 июля – извещение участников конференции о результатах рецензирования и принятии докладов</li>
         <li>26-28 августа – проведение конференции</li>
       </ul>
-      <h3>Расписание работы конференции:</h3>
+      <h3>Расписание работы конференции</h3>
       <ul>
         <li>26 августа – заезд участников конференции</li>
         <li>27 августа – открытие конференции, пленарное заседание, работа научных секций и тематических семинаров</li>
         <li>28 августа – пленарное заседание, секция стендовых докладов, культурная программа, закрытие конференции</li>
       </ul>
-    </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-12">
-    <div class="invite_wrapper_contacts">
-      <h4>Контакты Оргкомитета:</h4>
-      <p><a href="mailto:AKSTSRussia@gmail.com">AKSTSRussia@gmail.com</a></p>
-      <p><b>ВАЖНО!</b> Просьба указывать в теме письма «АНТОК-2018».</p>
+      <h3>Информационное письмо и программа</h3>
       <p>Рабочие языки конференции: русский и английский.</p>
-      <p>Информационное письмо конференции: в приложении.</p>
+      <ul>
+        <li><%= link_to "Информационное письмо (Рус.)", '/docs/Inform1_v3.0.docx' %></li>
+        <li><%= link_to "Программа конференции / Program", '/docs/2018_Program_EN_RU_v1.12.pdf', target: "_blank" %></li>
+        <li><%= link_to "О компенсации транспортных расходов", '/docs/tickets2018_v1.pdf', target: "_blank" %></li>
+        <li><%= link_to "Стендовые требования", '/docs/stand.docx' %></li>
+      </ul>
+    </div>
+    <div class="invite_wrapper_dates">
+      <h3>Контакты оргкомитета</h3>
+      <p><b>ВАЖНО!</b> Просьба указывать в теме письма «АНТОК-2018».</p>
+      <p>Email: <a href="mailto:AKSTSRussia@gmail.com">AKSTSRussia@gmail.com</a></p>
       <div class="respect">
         С уважением,<br/>
         Оргкомитет АНТОК
-      </div>
-      <div class="attach">
-        <div><%= link_to "Информационное письмо (Рус.)", '/docs/Inform1_v3.0.docx' %></div>
-        <br/>
-        <div><%= link_to "Программа конференции / Program", '/docs/2018_Program_EN_RU_v1.12.pdf', target: "_blank" %></div>
-        <br/>
-        <div><%= link_to "О компенсации транспортных расходов", '/docs/tickets2018_v1.pdf', target: "_blank" %></div>
       </div>
     </div>
   </div>
