--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -20,6 +20,7 @@
         <li><%= link_to t(:home_link_message), message_path %></li>
         <li><%= link_to t(:home_link_about), about_path %></li>
         <li><%= link_to t(:home_link_history), history_path %></li>
+        <li><%= link_to t(:home_link_hotel), hotel_path %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
