--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -61,6 +61,10 @@
   <div class="col-md-6">
     <div class="invite_wrapper_dates">
       <h3>НОВОСТИ</h3>
+      <h4>Определены участники секций и воркшопов</h4>
+      <p><b>13 августа 2018</b></p>
+      <p>Определены участники всех секций и воркшопов. Просьба ознакомиться, при наличии вопросов обращайтесь в Оргкомитет.</p>
+      <p>Читать тут - <%= link_to "Программа секций и воркшопов", '/docs/2018_WorkshopProgramEN-RU_v1.6.pdf', target: "_blank" %></p>
       <h4>Выступление в виде стендового доклада</h4>
       <p><b>4 августа 2018</b></p>
       <p>По результатам рассмотрения статей и тезисов докладов рецензентом будет определена форма выступления – устная презентация или стендовый доклад. <span style="background-color: yellow;">Список участников стендовой сессии</span> будет указан 10 августа 2018 г. на сайте конференции в разделе <i>Стендовая сессия</i>.</p>
@@ -87,7 +91,8 @@
       <p>Рабочие языки конференции: русский и английский.</p>
       <ul>
         <li><%= link_to "Информационное письмо (Рус.)", '/docs/Inform1_v3.0.docx' %></li>
-        <li><%= link_to "Программа конференции / Program", '/docs/2018_Program_EN_RU_v1.12.pdf', target: "_blank" %></li>
+        <li><%= link_to "Программа конференции / Program", '/docs/2018_Program_EN_RU_v2.5.pdf', target: "_blank" %></li>
+        <li><%= link_to "Программа секций / Workshops program", '/docs/2018_WorkshopProgramEN-RU_v1.6.pdf', target: "_blank" %></li>
         <li><%= link_to "О компенсации транспортных расходов", '/docs/tickets2018_v1.pdf', target: "_blank" %></li>
         <li><%= link_to "Стендовые требования", '/docs/stand.docx' %></li>
       </ul>
