--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,41 +15,78 @@
       <%= render 'layouts/messages' %>
       <div class="row banners">
         <div class="col-md-2 hidden-xs hidden-sm banner">
-          <%= image_tag "banner_aksts2_a.jpg", class: "img-responsive" %>
+          <a href="http://www.aksts.ru/" target="_blank">
+            <%= image_tag "banner_aksts2_a.jpg", class: "img-responsive" %>
+          </a>
         </div>
         <div class="col-md-2 hidden-xs hidden-sm banner">
-          <%= image_tag "banner_kofst2_a.jpg", class: "img-responsive" %>
+          <a href="http://www.kofst.or.kr/kofst_us/index.html" target="_blank">
+            <%= image_tag "banner_kofst2_a.jpg", class: "img-responsive" %>
+          </a>
         </div>
         <div class="col-md-2 hidden-xs hidden-sm banner">
-          <%= image_tag "banner_ook_a.jpg", class: "img-responsive" %>
+          <a href="https://www.ook-media.ru/" target="_blank">
+            <%= image_tag "banner_ook_a.jpg", class: "img-responsive" %>
+          </a>
         </div>
         <div class="col-md-2 hidden-xs hidden-sm banner">
-          <%= image_tag "banner_korustec_a.jpg", class: "img-responsive" %>
+          <a href="http://www.korustec.or.kr/en/" target="_blank">
+            <%= image_tag "banner_korustec_a.jpg", class: "img-responsive" %>
+          </a>
         </div>
-        <div class="col-md-2 hidden-xs hidden-sm banner">
-          <%= image_tag "banner_mdkm_a.png", class: "img-responsive" %>
+        <div class="col-md-1 hidden-xs hidden-sm banner">
+          <a href="https://vk.com/mdkm_rf" target="_blank">
+            <%= image_tag "banner_mdkm_a1.png", class: "img-responsive" %>
+          </a>
         </div>
-        <div class="col-md-2 hidden-xs hidden-sm banner">
-          <%= image_tag "banner_kahak_tinbo_a.jpg", class: "img-responsive" %>
+        <div class="col-md-1 hidden-xs hidden-sm banner">
+          <a href="http://gazeta-rk.ru/" target="_blank">
+            <%= image_tag "banner_rk_a.jpg", class: "img-responsive" %>
+          </a>
+        </div>
+        <div class="col-md-1 hidden-xs hidden-sm banner">
+          <a href="http://www.ntokaxak.kz/" target="_blank">
+            <%= image_tag "banner_kahak_a1.png", class: "img-responsive" %>
+          </a>
+        </div>
+        <div class="col-md-1 hidden-xs hidden-sm banner">
+          <%= image_tag "banner_tinbo_a1.png", class: "img-responsive" %>
         </div>
 
         <div class="hidden-md hidden-lg banner">
-          <%= image_tag "banner_aksts2_b.jpg", class: "img-responsive" %>
+          <a href="http://www.aksts.ru/" target="_blank">
+            <%= image_tag "banner_aksts2_b.jpg", class: "img-responsive" %>
+          </a>
         </div>
         <div class="hidden-md hidden-lg banner">
-          <%= image_tag "banner_kofst2_b.jpg", class: "img-responsive" %>
+          <a href="http://www.kofst.or.kr/kofst_us/index.html" target="_blank">
+            <%= image_tag "banner_kofst2_b.jpg", class: "img-responsive" %>
+          </a>
         </div>
         <div class="hidden-md hidden-lg banner">
-          <%= image_tag "banner_ook_a.jpg", class: "img-responsive" %>
+          <a href="https://www.ook-media.ru/" target="_blank">
+            <%= image_tag "banner_ook_a.jpg", class: "img-responsive" %>
+          </a>
         </div>
         <div class="hidden-md hidden-lg banner">
-          <%= image_tag "banner_korustec_b.jpg", class: "img-responsive" %>
+          <a href="http://www.korustec.or.kr/en/" target="_blank">
+            <%= image_tag "banner_korustec_b.jpg", class: "img-responsive" %>
+          </a>
         </div>
         <div class="hidden-md hidden-lg banner">
-          <%= image_tag "banner_mdkm_b.png", class: "img-responsive" %>
+          <a href="https://vk.com/mdkm_rf" target="_blank">
+            <%= image_tag "banner_mdkm_b.png", class: "img-responsive" %>
+          </a>
         </div>
         <div class="hidden-md hidden-lg banner">
-          <%= image_tag "banner_kahak_tinbo.jpg", class: "img-responsive" %>
+          <a href="http://gazeta-rk.ru/" target="_blank">
+            <%= image_tag "banner_rk_b.jpg", class: "img-responsive" %>
+          </a>
+        </div>
+        <div class="hidden-md hidden-lg banner">
+          <a href="http://www.ntokaxak.kz/" target="_blank">
+            <%= image_tag "banner_kahak_tinbo.jpg", class: "img-responsive" %>
+          </a>
         </div>
       </div>
       <%= yield %> 
