--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -130,6 +130,10 @@ textarea.form-control {
   text-align: center;
 }
 
+.news_record {
+  margin-top: 20px;
+}
+
 // body {
 //   padding-top: 20px;
 //   padding-bottom: 60px;
